codex-rs/tui/src/snapshots/codex_tui__history_cell__tests__explored_display_includes_tool_parameters.snap
---
source: tui/src/history_cell.rs
expression: rendered
---
• Read 2 files, Grep 1 search, Glob 1 pattern
